Update Landing Page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
     "@types/uniqid": "^5.3.4",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
@@ -37,6 +39,7 @@
     "react-dom": "^18",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.1",
+    "tailwind-merge": "^2.3.0",
     "uniqid": "^5.4.0",
     "y-prosemirror": "^1.2.2",
     "y-protocols": "^1.0.6",
